HR页面 ，办公室主任页面
旧的default 加了left nav

--- a/REGISTER/基础页面.html
+++ b/REGISTER/基础页面.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
+
 <!--nav 是default的界面-->
 <nav>
-  <div id="logo">主页LOGO</div>
-
+  <div id="logo"><img src="PuzzleLogo.png" width="50px" height="50px">PUZZLE</div>
 
   <ul class="menu">
     <li><a href="#">首页</a></li>
@@ -39,8 +39,22 @@
   </ul>
 </nav>
 
+<!--second left nav left -->
+
+<div class="navbarleft">
+
+  <ul class="menu">
+    <li><a href="#" >用户管理</a></li>
+    <li><a href="#" >用户检查</a></li>
+    <li><a href="#" >用户不要玩</a></li>
+    <li><a href="#" >用户打给我</a></li>
+    <li><a href="#" >用户去睡觉</a></li>
+  </ul>
+</div>
+
+
 <div class="footer">
-  <h2>Puzzle团队合作生产</h2>
+  <h2>Puzzle团队合作生产@copyright</h2>
 </div>
 
 </body>
