--- a/REGISTER/用户注册认证.html
+++ b/REGISTER/用户注册认证.html
@@ -40,6 +40,21 @@
   </ul>
 </nav>
 
+
+<!--second left nav left -->
+
+<div class="navbarleft">
+
+  <ul class="menu">
+    <li><a href="#" >用户管理</a></li>
+    <li><a href="#" >用户检查</a></li>
+    <li><a href="#" >用户不要玩</a></li>
+    <li><a href="#" >用户打给我</a></li>
+    <li><a href="#" >用户去睡觉</a></li>
+  </ul>
+</div>
+
+
 <div class="footer">
   <h2>Puzzle团队合作生产@copyright</h2>
 </div>
